ci: Improve pushing commits

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -48,6 +48,7 @@ jobs:
                 pdm install --plugins
             - name: Setup git configuration
               run: |
+                git checkout ${{ github.head_ref }}
                 git config --global user.name 'Github actions (carstencodes)'
                 git config --global user.email 'carstencodes@users.noreply.github.com'
             - name: Setup new version
@@ -66,4 +67,4 @@ jobs:
                 git add src/simplepycons
                 git commit -m "chore: Updated icons according to new tags"
             - name: Push changes
-              run: git push
+              run: git push origin HEAD
