--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simplepycons"
-version = "1! 15.7.0 | tr -d [:space:]"
+version = "1!15.7.0"
 description = "Python Wrapper for the simpleicons (https://simpleicons.org) library"
 authors = [
     { name = "Carsten Igel", email = "cig@bite-that-bit.de" },
