--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -59,8 +59,13 @@ jobs:
                 _new_version=$(echo "${_epoch}!${_version}" | tr -d [:space:])
                 _old_version=$(pdm show --version)
                 sed -i "s/${_old_version}/${_new_version}/g" pyproject.toml
-                git add pyproject.toml
-                git commit -m "chore: Update version from ${_old_version} to ${_new_version}"
+                if [ "$(git status --porcelain | wc -l)" -ne "0"];
+                then
+                    git add pyproject.toml
+                    git commit -m "chore: Update version from ${_old_version} to ${_new_version}"
+                else
+                    echo "Nothing to do."
+                fi
             - name: Generate new Icons
               run: pdm generate
             - name: Check-in differences
