--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ test = [
     "tox>=3.25.1",
     "tox-pdm>=0.6.0",
     "pytest-cov>=3.0.0",
+    "num2words>=0.5.13",
 ]
 formatting = [
     "black>=22.6.0",
